# mcp_server

./: README.md
mcp_client/: README.md  pyproject.toml  pyrightconfig.json
mcp_client/src/: settings.py
mcp_client/src/mcp_client/: __init__.py
mcp_client/src/utils/: command_utils.py  handle_agent_loop_utils.py  handle_message_utils.py  llm_utils.py  mcp_startup_utils.py  parse_message_utils.py  print_utils.py  types.py
mcp_server/: README.md  __init__.py  pyproject.toml  server.py
mcp_server/app/: __init__.py  guideline_extractions_handler.py  local_files_handler.py  notebook_handler.py
mcp_server/config/: __init__.py  settings.py
mcp_server/resources/: __init__.py
mcp_server/routers/: __init__.py  tools.py
mcp_server/src/app/: query_file_handler.py  scraping_handler.py
mcp_server/src/prompts/: __init__.py  research_instructions_prompt.py
mcp_server/src/resources/: system_resources.py
mcp_server/src/routers/: prompts.py  resources.py  tools.py
mcp_server/src/tools/: extract_guidelines_urls_tool.py  generate_next_queries_tool.py  process_local_files_tool.py  scrape_and_clean_other_urls_tool.py  transcribe_youtube_videos_tool.py
mcp_server/utils/: file_utils.py  logging_utils.py
